--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,6 +3,12 @@ apply plugin: 'com.android.application'
 android {
     namespace "com.cdgsir.classes"
     compileSdk rootProject.ext.compileSdkVersion
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
+    }
+    
     defaultConfig {
         applicationId "com.cdgsir.classes"
         minSdkVersion rootProject.ext.minSdkVersion
